# Ax-equals-b

./: README.md  pyproject.toml
sandbox/: graphing.py  sympy_matrices_1_intro.py  sympy_matrices_2_linalg.py  sympy_matrices_3_matrix_determinant.py  sympy_tutorial_1_introduction.py  sympy_tutorial_2_gotchas.py  sympy_tutorial_3_basic_operations.py  sympy_tutorial_4_printing.py  sympy_tutorial_5_simplification.py  sympy_tutorial_6_calculus.py  sympy_tutorial_7_solvers.py  sympy_tutorial_8_matrices.py  sympy_tutorial_9_advanced_expressions.py
singh/: ch1_2_4_rref.py  ex_1.7_gaussian_elimination.py  ex_1.8_gaussian_elimination.py  ex_1_7_gaussian_elimination.py  ex_1_8_gaussian_elimination.py  ex_1_9_rref.py
singh/ch01/: x1_2_1b.py  x1_2_1c.py  x1_2_2a.py
singh/ch01_02/: x1_2_1a.py  x1_2_3c.py
singh/ch01_03/: ex1_13_dot_inner_product.py  ex1_14_linear_combinations.py  x1_3_13.py  x1_3_14.py  x1_3_6.py
singh/ch1_2/: x1_2_1e.py
singh/ch1_2_gaussian_elimination/: x1_2_2c.py
singh/ch1_3/: ex1_10_vector_graph.py  ex1_11_lines.py  x1_3_10.py  x1_3_11.py  x1_3_2.py  x1_3_4.py  x1_3_5.py  x1_3_6.py  x1_3_7.py
singh/ch1_3_vector_arithmetic/: x1_3_12.py  x1_3_15.py  x1_3_3.py  x1_3_5.py  x1_3_8.py  x1_3_9.py
singh/ch1_4/: ex1_15_matrix_scalar.py  ex1_21_skew.py  (+8 more)
strang/: 0_playlist.md  1_geometry_of_linear_equations.py  2_left_vs_right.py  2_matrix_elimination.py  3_inverse.py  3_matrix_multiplication.py  4_A_equals_LU_2x2.py  4_A_equals_LU_3x3.py  4_inverse_of_AB.py  4_inverse_transpose.py  4_permutation_matrices.py  matrix_elimination.py
util/: frac.py  graph.py
(+230 files in other folders)
